# pyefscape

./: AGENTS.md  README.md  pyproject.toml
arrowice/: arrowclient.py  arrowserver.py
efscape/: efscape_impl.py  requirements_dev.txt
slice/arrowice/: ArrowService.ice
slice/efscape/: common.ice
