[tool.poetry]
name = "efscape"
version = "0.3.0"
description = "Provides a Python implementation of the efscape ZeroC ICe interface"
authors = ["Jon C Cline <jon.c.cline@gmail.com>"]
readme = "README.md"
packages = [{include = "efscape"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.12"
xdevs = "^3.0.0"
click = "^8.1.8"
click-log = "^0.4.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.4"
pytest = "^8.3.4"
nox = "^2024.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
